hphp/test/zend/bad/ext/standard/tests/file/bug41655_1.php
<?php
ini_set('open_basedir', /tmp);

$a=glob("./*.jpeg");
var_dump($a);
echo "Done\n";
?>